--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>New York times</title>
+    <link rel="stylesheet" href="./style.css">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Overpass&family=Material+Icons&display=swap" rel="stylesheet">
+    <script src="./script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="header-title">New York Times best sellers</div>
+        <div class="header-icon">
+            <span class="material-icons-outlined">
+                menu
+                </span>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div id="bestSellers" class="cards-container">  
+            </div>
+        </div>
+    </main>
 </body>
 </html>
